# Lloyd-s-iteration

./: README.md
delaunay_projet/src/: CMakeLists.txt  delaunay.ui  dt.h  glviewer.cpp  glviewer.h  main.cpp  scene.h  window.cpp  window.h
